Fixed text overflow errors

--- a/styles/components.scss
+++ b/styles/components.scss
@@ -10,7 +10,7 @@
 }
 
 .section_description {
-  @apply mt-[10px] break-keep text-h5 font-bold md:text-base;
+  @apply mt-[10px] text-h5 font-bold md:text-base;
 }
 
 // container
